trunk/Archive2/2e/861eb25b53073a/output
main.cpp: In function 'void fun()':
main.cpp:18:39: error: 'myPoint' declared 'threadprivate' after first use
   #pragma omp threadprivate(myPoint)  
                                       ^
